[package]
name = "grpc-bench"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
grpcio = "0.5.0-alpha.5"
tonic = "0.1.0-beta.1"

bytes = "0.4"
chrono = "*"
futures = "0.3"
prost = "*"
rand = "*"
structopt = "*"
tokio = { version = "*", features = ["full"] }

[build-dependencies]
tonic-build = "0.1.0-beta.1"
