[package]
name = "grpc-bench"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
grpcio = "0.5.0-alpha.5"
tonic = "0.1.0"

chrono = "*"
futures = "0.1"
futures03 = { version = "0.3", package = "futures" }
prost = "0.6"
protobuf = "*"
rand = "*"
structopt = "*"
tokio = { version = "*", features = ["full"] }

[build-dependencies]
protoc-grpcio = "1.1.0"
tonic-build = "0.1.0"
